--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next_canvas_download",
+  "name": "tempnext",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
     "html-to-image": "^1.11.11",
-    "next": "13.4.13",
+    "next": "13.4.19",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.27",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-file-reader": "^1.1.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
